# structure

./: .gitignore  Cargo.toml
crypto/: Cargo.toml
crypto/src/: lib.rs
frontend/: index.html  main.js  terminal.css
frontend/js/: api.js  auth.js  state.js  ui.js  ws.js
migrations/: 20250824195100_create_initial_schema.down.sql  20250824195100_create_initial_schema.up.sql  20250824223038_create_location_links.down.sql  20250824223038_create_location_links.up.sql
server/: Cargo.toml
server/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  state.rs  ws.rs
server/src/handlers/: location_handler.rs  mod.rs  player_handler.rs  user_handler.rs
server/src/models/: link.rs  location.rs  mod.rs  player.rs  user.rs
server/src/routes/: mod.rs
server/src/ws/: handler.rs  mod.rs  state.rs  utils.rs
