# /var/www/structure/server/Cargo.toml
[package]
name = "server"
version = "0.1.0"
edition = "2024" # Используем стабильную редакцию для предсказуемости

[dependencies]
# Основа
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

# Логирование и конфигурация
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# База данных
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Веб-утилиты
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }

# Аутентификация и криптография
argon2 = "0.5"
uuid = { version = "1", features = ["serde", "v4"] }
jsonwebtoken = "9"

# Утилиты
chrono = { version = "0.4", features = ["serde"] }
querystring = "1.1.0"